fixed icon spacing on task footer

--- a/client/src/pages/dashboard/project-views/board/views/active-board/status/task/Task.module.scss
+++ b/client/src/pages/dashboard/project-views/board/views/active-board/status/task/Task.module.scss
@@ -58,7 +58,7 @@
       }
 
       &:not(:last-child) {
-        margin-right: 0.3rem;
+        margin-right: 0.7rem;
       }
     }
   }
